<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="a400_calibration_thickness_measurement_title">Thickness Measurement Calibration</string>
    <string name="a400_calibration_thickness_measurement_title_abbreviation">Thickness M. Calibration</string>
    <string name="a400_calibration_thickness_measurement_content">The machine will calibrate the thickness measurement system automatically with the laser calibration target. Redo this calibration after you have reassembled the machine, replaced the toolhead or if you find the thickness measurement is inaccurate.</string>
    <string name="a400_calibration_platform_height_title">Platform Height Calibration</string>
    <string name="a400_calibration_central_axis_title">Central Axis Calibration</string>
    <string name="a400_calibration_central_axis_content">For 4-axis machining, you need to locate the central axis of the Rotary Module using a cylinder material. Completing this calibration allows you to start a laser job properly via inputting the material’s diameter.</string>
    <string name="a400_calibration_platform_height_content">Calibrate the platform height with the laser calibration target for automatic laser height adjustment based on the input material thickness,  optimizing engraving and cutting results.</string>
    <string name="a400_laser_calibration_camera_calibration_title">Camera Calibration</string>
    <string name="a400_laser_calibration_camera_calibration_content">To use Camera Capture in Snapmaker Luban, you need to calibrate the camera. Redo this calibration after you have reassembled the machine or replaced the toolhead.</string>
    <string name="a400_calibration_manual_tool_setting_title">Manual Tool Setting</string>
    <string name="a400_calibration_manual_tool_setting_content">Set the work origin by manually controlling the toolhead. You need to move the toolhead to where the work origin will be.</string>
    <string name="a400_calibration_manual_tool_setting_advanced_mode_content">Set the work origin by manually controlling the toolhead. You need to separately set origin in the XYZ orientations, and their combination will be the work origin. </string>
    <string name="a400_calibration_bit_assistant_title">Bit Assistant</string>
    <string name="a400_calibration_bit_assistant_content">Bit Assistant guides you to manipulate the original bit and the new bit to touch the same spot on the material. The machine will work out the Z offset and automatically locate the new work origin. Before proceeding with Bit Assistant, do not detach the original bit.</string>
    <string name="a400_calibration_a400_xy_material_format">Material: %s</string>
    <string name="all_material_PLA">PLA</string>
    <string name="all_material_PETG">PETG</string>
    <string name="all_material_ABS">ABS</string>
    <string name="a400_calibration_xy_mode_custom">Custom</string>
    <string name="all_material_CUSTOM">Custom Material</string>
    <string name="a400_calibration_leveling_xy_selection_left_temperature_title">Nozzle L: Printing Temp.</string>
    <string name="a400_calibration_leveling_xy_selection_right_temperature_title">Nozzle R: Printing Temp.</string>
    <string name="a400_calibration_leveling_xy_selection_left_stand_by_temperature_title">Nozzle L: Standby Temp. </string>
    <string name="a400_calibration_leveling_xy_selection_right_stand_by_temperature_title">Nozzle R: Standby Temp.</string>
    <string name="a400_calibration_leveling_xy_selection_heated_bed_temperature_title">Heated Bed Temp.</string>
    <string name="a400_calibration_heated_bed_leveling_auto_content">The toolhead will automatically probe and obtain data for specific points on the heated bed to adjust the movement of the two nozzles accordingly during printing.</string>
    <string name="a400_calibration_heated_bed_leveling_manual_content">Manually control the toolhead to probe and obtain data for specific points on the heated bed. The movement of the two nozzles will be adjusted accordingly during printing.</string>
    <string name="a400_calibration_heated_bed_leveling_content_1">Heat Heated Bed and Nozzle (1/2)</string>
    <string name="a400_calibration_heated_bed_leveling_content_2">Calibrate Calibration Points (2/2)</string>
    <string name="a400_calibration_heated_bed_leveling_content_3">Calibrate Calibration Points (3/3)</string>
    <string name="a400_calibration_z_leveling_title">Z Offset Calibration</string>
    <string name="a400_calibration_xy_leveling_title">XY Offset Calibration</string>
    <string name="a400_calibration_z_leveling_sensor_calibration_manual_calibrating_content">Manually lower the right nozzle of the toolhead against the 3D printing platform’s surface with the calibration card until you feel slight resistance when you pull out the calibration card, and it should be wrinkled when you push it forward.</string>
    <string name="a400_calibration_heft">L</string>
    <string name="a00_calibration_right">R</string>
    <string name="a400_calibration_headted_bed_leveling_guide">Automatically calibrating... %1$d/%2$d</string>
    <string name="a400_calibration_headted_bed_leveling_time">Estimated time %d s. %d s left.</string>
    <string name="a400_calibration_headted_bed_leveling_wait_time">Estimated time XX s. XX s left.</string>
    <string name="preparation">preparation</string>
    <string name="a400_calibration_cnc_manual_tool">Manual Tool Setting</string>
    <string name="a400_calibration_cnc_manual_tool_content">You need to move the toolhead to where the work origin will be.</string>
    <string name="a400_calibration_cnc_manual_tool_advanced_mode_content">You need to separately set origin in the XYZ orientations, and their combination will be the work origin. </string>
    <string name="a400_calibration_cnc_tool_change">Bit Assistant</string>
    <string name="a400_calibration_cnc_tool_change_stop_title">Bit Assistant</string>
    <string name="a400_cnc_tool_change_assistant_content_">Bit Assistant guides you to manipulate the existing bit and the new bit to touch the same spot on the material. The machine will work out the Z offset and automatically locate the new work origin. Before proceeding with Bit Assistant, do not detach the existing bit.</string>
    <string name="a400_calibration_cnc_origin_assistant_content">For 4-axis machining, you can use Origin Assistant to promptly set work origin, which will be stored in the system. So in future carving sessions, as long as the dimensions of the material remain unchanged, you can select your files and start right away.</string>
    <string name="a400_calibration_auto_content"> The toolhead will automatically probe and obtain data for specific points (%s) on the 3D printing platform to adjust the movement of the two nozzles accordingly during printing.</string>
    <string name="a400_calibration_manual_content">Manually control the toolhead to probe and obtain data for specific points (%s) on the 3D printing platform. The movement of the two nozzles will be adjusted accordingly during printing.</string>
    <string name="a400_leveling_bed_calibration_left_point_content">Turn the front-left thumbwheel under the heated bed to adjust the Z offset of the left toolhead at the left point, and calibrate it with the calibration card.</string>
    <string name="a400_leveling_bed_calibration_datum_title">Calibrate Datum Point</string>
    <string name="a400_leveling_bed_calibration_datum_content">Place the calibration card between the left toolhead and the heated bed, and tap Next. Then, adjust the Z offset until you feel slight resistance when pulling out the calibration card, and it should be wrinkled when you push it forward.</string>
    <string name="a400_leveling_bed_calibration_right_point_content">Turn the front-right thumbwheel under the heated bed to adjust the Z offset of the left toolhead at the right point, and calibrate it with the calibration card.</string>
    <string name="a400_calibration_complete_continue_calibration">Continue Calibration</string>
    <string name="a400_calibration_complete_home_screen">Home Screen</string>
    <string name="all_extruder_temperature_format">%d/%d°C</string>
    <string-array name="a400_calibration_leveling_grid_types_array">
        <item>3 × 3</item>
        <item>5 × 5</item>
        <item>9 × 9</item>
    </string-array>
    <string name="a400_control_laser_open">1. Ensure that you’ve closed the Enclosure door.
        \n2. Ensure that the current work platform is the laser \nengraving and cutting platform.</string>
    <string name="a400_control_cnc_open_title">The Spindle of CNC Module Will Start Working</string>
    <string name="a400_control_cnc_open">1. Ensure that you’ve closed the Enclosure door or worn the CNC safety goggles.
        \n2. Ensure that the current work platform is the CNC carving and cutting platform.</string>
    <string name="a400_control_switching_extruder">Switching nozzle...</string>
    <string name="all_left_nozzle_temp_abbr">Left Nozzle Temp.</string>
    <string name="all_right_nozzle_temp_abbr">Right Nozzle Temp.</string>
    <string name="a400_control_filament_park_toolhead_bed"><![CDATA[Park Toolhead & Bed]]></string>
    <string name="a400_print_dialog_warning_filament_run_out_action_load_filament">Load Filament</string>
    <string name="a400_print_dialog_warning_filament_run_out_action_heating_nozzle">Heating the nozzle...</string>
    <string name="a400_print_dialog_warning_filament_run_out_pull_out_filament_content">Manullay pull out the filament and insert it into the filament guide tube again until you can feel the filament is gripped and being pulled in.</string>
    <string name="a400_print_dialog_warning_filament_run_out_insert_filament_title">Insert Filament</string>
    <string name="a400_print_dialog_warning_filament_run_out_insert_filament_content">Manually insert the new filament into the filament guide tube until you can feel the filament is gripped and being pulled in.</string>
    <string name="a400_calibration_leveling_bed_heating_desc">Heating the heated bed and nozzle...</string>
    <string name="a400_calibration_leveling_bed_heating_nozzle_temp_title">Left Nozzle Temp：</string>
    <string name="a400_calibration_leveling_bed_heating_Heated_bed_title">Heated Bed Temp：</string>
    <string name="a400_calibration_leveling_bed_heating_temperature_format">/%3d℃</string>
    <string name="a400_calibration_camera_calibration_10w_title">Camera Calibration</string>
    <string name="a400_calibration_platform_height_calibration_10w_title">Platform Height Calibration</string>
    <string name="a400_calibration_complete_thk_measure">Congrats! You have completed the Thickness Measurement Calibration.</string>
    <string name="calibration_auto_mode">Auto Mode</string>
    <string name="calibration_heated_bed_calibration_point">Calibration Points</string>
    <string name="calibration_heated_bed_heated_bed_temp">Heated Bed Temp.</string>
    <string name="a400_control_air_purifier_settings_laser_and_cut_title">Laser Engraving and Cutting Job</string>
    <string name="a400_control_air_purifier_settings_3dp_job_title">3D Printing Job</string>
    <string name="a400_control_air_purifier_settings_cnc_job_title">CNC Carving Job</string>
    <string name="a400_control_enclosure_door_detection">Door Detection</string>
    <string name="all_material_diameter">Diameter</string>
    <string name="a400_calibration_4axis_central_axis_title">Set Material Diameter</string>
    <string name="a400_calibration_4axis_central_axis_content">Measure and input the material’s diameter. Then, fix the material to the 3-jaw chuck. </string>
    <string name="j1_control_heated_bed_on">On</string>
    <string name="j1_control_heated_bed_off">Off</string>
    <string name="j1_control_heated_bed_subtitle">Motor Switch</string>
</resources>