<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_j1_motor_control_title"
        style="@style/AppTheme.TextBody2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_52"
        android:text="@string/j1_control_heated_bed_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?attr/theme_color_body_secondary2"/>

    <TextView
        android:id="@+id/tv_j1_motor_control_status"
        style="@style/AppTheme.TextLargeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_12"
        android:text="On"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_j1_motor_control_title" />

    <LinearLayout
        android:id="@+id/lin_j1_motor_control_switch"
        android:layout_width="220dp"
        android:layout_height="52dp"
        android:layout_marginTop="@dimen/margin_layout_28"
        android:background="@drawable/pic_tab_horizontal_right_440x104"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_j1_motor_control_status">

        <ImageView
            android:id="@+id/iv_j1_motor_control_switch_pic"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/icon_off_normal_64x64" />

        <ImageView
            android:id="@+id/iv_j1_motor_control_light_pic"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/icon_motor_checked_64x64" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout_8"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_j1_motor_control_switch">

        <TextView
            android:id="@+id/tv_j1_motor_control_switch_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/j1_control_heated_bed_off"
            android:textColor="@color/palette_grey_storm"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:id="@+id/tv_j1_motor_control_light_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/j1_control_heated_bed_on"
            android:textColor="@color/palette_grey_storm"
            android:textSize="@dimen/font_size_14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
