<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    android:orientation="vertical">

    <include layout="@layout/a400_top_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="48dp"
        android:paddingEnd="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/a400_control_air_purifier_settings_laser_and_cut_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2E2E2E" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="9dp">

                <TextView
                    android:id="@+id/tv_door_detection_label0"
                    style="@style/AppTheme.TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/a400_control_enclosure_door_detection"
                    android:textColor="@color/palette_white_pure" />

                <fabscreen.platform.core.ui.common.A400SwitchCompat
                    android:id="@+id/switch_laser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/shape_a400_switch_thumb"
                    app:track="@drawable/selector_a400_switch_track" />
            </RelativeLayout>

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/a400_control_air_purifier_settings_3dp_job_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2E2E2E" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="9dp">

                <TextView
                    android:id="@+id/tv_auto_power_on_label0"
                    style="@style/AppTheme.TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/a400_control_enclosure_door_detection"
                    android:textColor="@color/palette_white_pure" />

                <fabscreen.platform.core.ui.common.A400SwitchCompat
                    android:id="@+id/switch_3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/shape_a400_switch_thumb"
                    app:track="@drawable/selector_a400_switch_track" />
            </RelativeLayout>

            <TextView
                style="@style/AppTheme.TextBody2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/a400_control_air_purifier_settings_cnc_job_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2E2E2E" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_marginTop="9dp">

                <TextView
                    android:id="@+id/tv_door_detection_label2"
                    style="@style/AppTheme.TextBody1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/a400_control_enclosure_door_detection" />

                <fabscreen.platform.core.ui.common.A400SwitchCompat
                    android:id="@+id/switch_cnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:thumb="@drawable/shape_a400_switch_thumb"
                    app:track="@drawable/selector_a400_switch_track" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
